--- a/cheatsheets/datatypes/style_data.css
+++ b/cheatsheets/datatypes/style_data.css
@@ -12,3 +12,11 @@ blockquote{
 p{
     text-align: justify;
 }
+
+table {
+    border-collapse: collapse; /* This collapses adjacent cell borders into a single border */
+  }
+  th, td {
+    border: 2px solid black;
+    padding: 3px 3px;
+  }
